<resources>
    <string name="app_name" translatable="false">YCO - YourCityOcurrences</string>
    <string name="title_activity_main" translatable="false">YCO - YourCityOcurrences</string>
    <string name="title_mapa">Occurrences Map</string>
    <string name="title_login">Log In</string>
    <string name="title_ajuda">Help:</string>
    <string name="title_notas">Notes</string>
    <string name="iniSessao">Log In</string>
    <string name="hint_iniciarSessao">Username</string>
    <string name="hint_password">Password</string>
    <string name="botao_iniciar_sessao">Log In</string>
    <string name="cd_logo" translatable="false">YCO - Your City Ocurrences</string>
    <string name="search_map">Search for an occurrence</string>
    <string name="layout_notes_title">My Notes</string>
    <string name="botao_registar">Sign In</string>
    <string name="criarNota">Add a new note</string>
    <string name="nova_nota_back_button_desc">Cancel note creation and go back</string>
    <string name="edit_titulo_nota">Title</string>
    <string name="hint_conteudo_nota">Note Content/Description</string>
    <string name="botao_save_nota">Save</string>
    <string name="new_note_activity_title">New Note</string>
    <string name="botao_remove_nota">Delete Note</string>
    <string name="voltar_ve_nota">Go back and save changes</string>
    <string name="title_ve_nota">View and Edit Note</string>
    <string name="registo_activity_title">Sign In</string>
    <string name="reisto_acc_info">Account Information</string>
    <string name="hint_rep_password">Repeate Password</string>
    <string name="registo_personal_info">Personal Information</string>
    <string name="hint_reg_nomeC">Full Name</string>
    <string name="hint_reg_numTel">Mobile Phone Number</string>
    <string name="hint_reg_numTelf">Telephone Number</string>
    <string name="hint_email">Email</string>
    <string name="cancel_reg">Cancel</string>
    <string name="confirmar_reg">Sign In</string>
    <string name="loc_details_title">Location Details</string>
    <string name="ocurrence_distrito_title">District/State:</string>
    <string name="ocorrencia_morada_title">Address:</string>
    <string name="ocurrence_coords_title">Coordinates:</string>
    <string name="user_details_title">Comunication Details:</string>
    <string name="ocurrence_username_title">Username:</string>
    <string name="ocurrence_data_title">Date:</string>
    <string name="nota_add_titulo_erro">The note\'s title is required!</string>
    <string name="nota_add_conteudo_erro">"The note's content is required! "</string>
    <string name="login_form_error">Username and Password are required!</string>
    <string name="user_creds_file_key" translatable="false">userCreds</string>
    <string name="username" translatable="false">username</string>
    <string name="title_activity_login_realizado" translatable="false">YCO - Your City Ocurrences</string>
    <string name="title_log_out">Log Out</string>
    <string name="warning">Warning</string>
    <string name="warning_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset_map_camera_button">Reset câmera to current location</string>
    <string name="layout_mapa_title">Ocurrences Map</string>
    <string name="botao_pesquisar">Search occurrence button.</string>
    <string name="er_ocurrence_title_hint">Occurrence Title</string>
    <string name="er_ocurrence_desc_hint"> Description</string>
    <string name="botao_delete_ocorrencia">Give as resolved</string>
    <string name="er_ocurrence_tipo_hint">Occurrence Type</string>
    <string name="ocurrence_type_title">Occurrence Type:</string>
    <string name="ocorrencia_titulo_erro">The title must not be empty!</string>
    <string name="ocorrencia_desc_erro">The description must not be empty!</string>
    <string name="ocorrencia_tipo_erro">The occurrence type must not be empty</string>
    <string name="alt_img_warning">Do you want to change the occurrence\'s image?</string>
    <string name="ocorrencia_atualizada">Occurrence successfully updated!</string>
    <string name="erro_permissoes_storage">To select the image, access to the phone\'s storage is required.</string>
    <string name="erro_select_img">An error occurred when selecting the image, please try again.</string>
    <string name="remover_ocorrencia">Are you sure you want to set occurrence as resolved? The occurrence will no longer show up for other users!</string>
    <string name="ocorrencia_removida">Occurrence Resolved!</string>
    <string name="titulo_adicionar_ocorrencia">Communicate a New Occurrence</string>
    <string name="add_occurrence_button">Add Occurrence</string>
    <string name="selecionarImg">Select Image</string>
    <string name="selectImgTitle">Occurrence\'s Image</string>
    <string name="no_img_selected">No image selected.</string>
    <string name="selected_img_desc">The selected image on the device for the occurrence.</string>
    <string name="erro_obtencao_username">Could not get the logged in user\'s username!</string>
    <string name="ocorrencia_adicionada">Occurrence Added!</string>
    <string name="img_obrigatoria">You must select an image to add to the occurrence!</string>
    <string name="label_red_marker">Other User\'s Occurrences</string>
    <string name="label_green_marker">My Occurrences</string>
    <string name="img_green_marker_cd">Green marker, indicating user created ocurrences.</string>
    <string name="img_red_marker_cd">Red marker, indicating other user\'s occurrences.</string>
    <string name="filtros_title">Occurrences Filters</string>
    <string name="filtrar_tipo">Type:</string>
    <string name="btn_filtro_tipo">Filter By Type</string>
    <string name="filtrar_raio">Radius in Kilometers (km) :</string>
    <string name="btn_filtro_raio">Filter by Radius</string>
    <string name="obter_tipos_erro">It was not possible to obtain the types of occurrences for selection!</string>
    <string name="erro_num_km">The number of kilometers can not be empty!</string>
    <string name="erro_num_km_tpDados">The value inserted for the number of kilometers is not valid!</string>
    <string name="value_format" translatable="false">%1$.2f</string>
    <string name="erro_pedido_login">Error when trying to log in. Please check that your have internet connection!</string>
    <string name="log_in_done" translatable="false">logInDone</string>
    <string name="qtd_raio_info">"Showing occurrences in a radius of: "</string>
    <string name="btn_limpar_filtros">Clean Filters</string>
    <string name="clear_filters_msg">Filters were cleared!</string>
    <string name="norte">Orientation: North (N)</string>1
    <string name="sul">Orientation: South (S)</string>
    <string name="leste">Orientation: East (E)</string>
    <string name="oeste">Orientation: Weast (W)</string>
</resources>