<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_login">

    <fragment
        android:id="@+id/navigation_notas"
        android:name="com.example.yco_yourcityocurrences.ui.notas.NotasFragment"
        android:label="@string/title_notas"
        tools:layout="@layout/fragment_notas" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.yco_yourcityocurrences.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_ajuda"
        android:name="com.example.yco_yourcityocurrences.ui.ajuda.AjudaFragment"
        android:label="@string/title_ajuda"
        tools:layout="@layout/fragment_ajuda" />
    <fragment
        android:id="@+id/navigation_mapa"
        android:name="com.example.yco_yourcityocurrences.ui.mapa.MapaFragment"
        android:label="@string/title_mapa"
        tools:layout="@layout/fragment_mapa" />
</navigation>